# SPHinXsys

./: CMakeLists.txt  setup.py
pySPHinXsys/: CMakeLists.txt  dambreak_module.hpp  main.cpp  pysphinxsys.h
pySPHinXsys/examples/: dambreak.py
src/for_3D_build/geometries/: triangle_mesh_shape.h
src/shared/tools/: kdtree.cpp  kdtree.h  polygon_mesh.cpp  polygon_mesh.h
tests/unit_tests_src/shared/test_polygon_mesh/: CMakeLists.txt  gtest_polygon_mesh.cpp
tests/unit_tests_src/shared/test_xml/: test_polygon_mesh.cpp
